Refine customer service with customer management